<resources>
    <string name="app_name">My Notes</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_in">Login In</string>
    <string name="add_new_notes">Add new note</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="enter_the_details">Enter the details</string>
    <string name="enter_note_description">Enter note description</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_click_here_to_create_new">Don\'t have an account? Click here to create new.</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
    <string name="your_mobile_no">Your mobile no.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
</resources>