<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_curve_top"
    tools:context=".fragment.AddNewNoteFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:drawablePadding="8dp"
        android:text="@string/enter_the_details"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Do Homework"
        android:hint="@string/enter_note_title"
        android:inputType="text|textAutoComplete|textCapSentences|textFilter"
        android:maxLength="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Do Homework"
        android:hint="@string/enter_note_description"
        android:inputType="text|textAutoComplete|textCapSentences|textFilter|textMultiLine"
        android:maxLength="1000"
        android:maxLines="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/note_description">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:reverseLayout="false"
            tools:itemCount="1"
            tools:listitem="@layout/image_rv" />

    </RelativeLayout>

    <Button
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="36dp"
        android:drawableEnd="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <Button
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:drawableEnd="@drawable/ic_baseline_add_photo_alternate_24"
        android:text="@string/upload_photo"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_note_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_note_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>